# ulafin-bot

./: .env.example  .gitignore  Dockerfile  Makefile  alembic.ini  docker-compose.dev.yml  docker-compose.yml  nixpacks.toml  pyproject.toml  railway.toml  requirements.txt
alembic/: env.py
alembic/versions/: 001_initial_schema.py
app/: config.py  main.py
app/cache/: __init__.py  rate_limiter.py  redis_client.py  session_store.py
app/db/: __init__.py  base.py  engine.py  session.py
app/handlers/: __init__.py  add_transaction.py  categories.py  errors.py  reports.py  settings.py  start.py
app/keyboards/: categories.py  common.py  main_menu.py  settings.py
app/middlewares/: auth.py  db_session.py  logging_mw.py  rate_limit.py  registration.py
app/models/: __init__.py  budget.py  category.py  currency.py  family.py  reminder.py  transaction.py  user.py
app/repositories/: base.py  category_repo.py  currency_repo.py  transaction_repo.py  user_repo.py
app/services/: category_service.py  ocr_service.py  report_service.py  transaction_service.py  user_service.py
app/utils/: formatting.py  icons.py  ocr.py  parsing.py  validators.py
scripts/: migrate_sqlite_to_pg.py  seed_categories.py  seed_currencies.py
