[project]
name = "ulafin-bot"
version = "2.0.0"
description = "UlaFin — Telegram financial tracker for millions of users"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.15,<4",
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.30,<1",
    "alembic>=1.14,<2",
    "redis[hiredis]>=5.0,<6",
    "pydantic-settings>=2.6,<3",
    "httpx>=0.28,<1",
    "apscheduler>=3.10,<4",
    "matplotlib>=3.9,<4",
    "openpyxl>=3.1,<4",
    "structlog>=24.0",
    "pytesseract>=0.3.13,<1",
    "Pillow>=11,<12",
    "pyyaml>=6,<7",
    "sentry-sdk>=2,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5",
    "ruff>=0.8",
    "mypy>=1.13",
    "aiosqlite>=0.20",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "TCH"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
